Tue Aug 30 23:59:36 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c, include/ruby/intern.h (rb_w32_fd_copy): implement
	  for rb_thread_select() in thread.c.  the use of rb_fd_copy() is
	  introduced in r33117.
	  [Bug #5229] [ruby-core:39102]

	* thread.c (rb_thread_select): must call rb_fd_init() before using
	  rb_fdset_t.  see the implementations of rb_fd_init()s if you want to
	  know the reason.

Tue Aug 30 22:34:45 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* test/dl/test_callback.rb (test_callback_with_string): prevents
	  temporary string from GC.

Tue Aug 30 22:25:38 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* vm_insnhelper.c (vm_call_cfunc): revert r33112.  RB_GC_GUARD macro
	  protect a VALUE from GC.  It's not for general anti-optimizing
	  purpose.

Tue Aug 30 11:06:19 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: Merge json gem 1.5.4+ (2149f4185c598fb97db1).
	  [Bug #5173] [ruby-core:38866]

Tue Aug 30 09:57:50 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/thread.rb (Queue#pop): fix a race against Thread.wakeup.
	  Patch by Masaki Matsushita <glass.saga at gmail dot com>
	  [Bug #5195] [ruby-dev:44400]

Tue Aug 30 09:48:07 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c (fiber_entry): fix stack allocation failure on Debian
	  GNU/kFreeBSD.
	  Patch by Lucas Nussbaum <lucas at lucas-nussbaum dot net>.
	  [Bug #5241] [ruby-core:39147]

Tue Aug 30 09:28:01 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_select): rewrite by using
	  rb_thread_fd_select(). old one is EINTR unsafe.
	  Patch by Eric Wong. [Bug #5229] [ruby-core:39102]
	
	* test/-ext-/old_thread_select/test_old_thread_select.rb:
	  a testcase for rb_thread_select().
	* ext/-test-/old_thread_select/old_thread_select.c: ditto.
	* ext/-test-/old_thread_select/depend: ditto.
	* ext/-test-/old_thread_select/extconf.rb: ditto.

Tue Aug 30 09:08:22 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
